# Project_Neon

./: .gitignore  BLUEPRINT_SETUP_GUIDE.md  CLAUDE.md  COMPLETE_GAMEPLAY_IMPLEMENTATION.md  ENEMY_AI_INTEGRATION.md  GAME_DEVELOPMENT.md  IMPLEMENTATION_COMPLETE.md  IMPORT_TO_UNREAL.md  LICENSE  MIGRATION_SUMMARY.md  NeonAscendant.sln  NeonAscendant.uproject  PYTHON_TO_UNREAL_MAPPING.md  QUICK_START_GUIDE.md  README.md  README_MIGRATION.md  START_HERE.md  UNITY_README.md  UNREAL_MIGRATION_PLAN.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: code-refactor-debugger.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  unreal-build.yml
Assets/Scripts/Enemy/: NeonEnemy.cs
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Content/Maps/: TestLevel.umap
Source/: NeonAscendant.Target.cs  NeonAscendantEditor.Target.cs
Source/NeonAscendant/: NeonAscendant.Build.cs
scripts/: export_to_unreal.py
src/: briefs.md
src/neon_ascendant/: __init__.py  archive.py  data.py  dismemberment.py  exporter.py  game.py  main.py  simulate.py  simulation.py  utils.py
tests/: test_archive.py  test_dismemberment.py  test_exporter.py  test_game.py  test_simulation.py  test_unreal_project.py
unreal_data/: Archetypes.csv  Districts.csv  Factions.csv  GameConstants.h  Weapons.csv  codex_export.json  repos.code-workspace
unreal_project_setup/: GETTING_STARTED.md  NeonAscendant.Build.cs  NeonAscendantCore.Build.cs  NeonAscendantCore.cpp
unreal_templates/: ArchetypeData.h  CodexSubsystem.cpp  CodexSubsystem.h  MissionGenerationSubsystem.h
(+42 files in other folders)
