[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "neon-ascendant-unreal"
version = "0.2.0"
description = "Unreal Engine scaffolding for the Neon Ascendant mission generator."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
authors = [
  { name = "APZ3r0" }
]

[project.optional-dependencies]
test = [
  "pytest>=8.2",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["neon_ascendant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
